[Bug #21024] <cstdbool> header is deprecated in C++17